Downgrade Java version to 11.